@@ -10,13 +10,13 @@ AUX wicd-init-sve-start.patch 317 SHA256 20d7ada99465da5b50d03e5ef117226910bc202
 DIST Icone-Wicd-Lucid.tar.gz 9015 SHA256 6e4e3483c6cff7398e6871dd3e4360e361e5c6e64007e8e1240fd1c259ac707e SHA512 0df0dbdf05b462264dca2dd9955454a82f688b0fbfa7c2ad70a424df57eb27b35561d37819fc88b5746cff8a54de5b7b43ec325d2f98a4a1a30e4d500e86d2f8 WHIRLPOOL 336f363092c9bac7523047b6052a856a699820147967820418c6ac1ca528c472d371c6c211c505c325b5eb001812042c01425b05e1dfdf2d4a528f96686c530a
 DIST wicd-1.7.4.tar.gz 547393 SHA256 67989614004773db349791c37675efb914d084bdb221356a05e4369c35e7eb62 SHA512 1e99a45daa858eba634e60e50c22aa2fab3fc4d643979a6741b6164bf500bd6db285d11c12ccd164ab6cf0792284e319e3c3447804088e74b4fc67bb6f431959 WHIRLPOOL 680c79380ea645a286889c737c7b478a933e4243ad20c5c0f8cf53d37747a1d98780e21a4aeb98bed6da37f93f61d5dd4a42b22466f2feceae08e87d853b80fd
 DIST wicd-mac4lin-icons.tar.xz 53136 SHA256 4c48c769c71f962415e3bd3573557e9288351afb867347f9a6f652883ae31011 SHA512 98ed3f92ec361aa8651c64efdb5128b8f73068f1cf2423640dafc4b46889ae32c1d1f56f509ad609b2bf98f634f8ada4c501f2294e3a64affd1befd4400498a8 WHIRLPOOL 84c097432ebb6ca66c0fa48d4226c8da5f6342b6fdeeb9546c98952b8f6e52a1f87d0ba23c1b409f3008432e5c6346bf65949dad99070804b1dcc2c1055eb9ea
-EBUILD wicd-1.7.4-r2.ebuild 5028 SHA256 cebaa087b59f995cbf63535adfc19c284d5cfcd8d880ce38a512f9fdaab5869d SHA512 f3222e902ea48c3d2462745c0a0bbbf1d9098e3fecc25a9226a6cace003992354ec889818f0c415fd9166c68caecd894a548e131969722002e33dc17fa10951c WHIRLPOOL 135c0f3a5918d3211de5f7d15007cc88efb290bc26d47ca812cf23bca55665f63a6c61e7db28b1dd12bf98f026835045c8c0e6226d9036b2268bb86c868e3bed
-MISC ChangeLog 454 SHA256 793993686d5cc24137b8140b1a78ec56bc7da1ef3d816267580955732fadcd6c SHA512 7b57708faef812a2ef852c89c374be622a97ad50ef4ac7973d9dd688fed00c9b415a568e5a83de1a616d652b34056b0b9655916b7ce61ee5c8581ff2dd31772d WHIRLPOOL 65b688bac6441364c9d6a4558b35332280a12790e1a4edf44874e1ee02e12e0384c920b08da776ab070224766f8cf0fbabf445aa1f792793dded18b098306e14
+EBUILD wicd-1.7.4-r3.ebuild 5111 SHA256 8bd5e9bada852064584873b1c8936dded7e0d0951a2869ad16f258dc7b55b759 SHA512 6ce07de2a02339552655a4706edc5ae70441c9cbf743857d6b8faf92c4e659c833e47b2565d6119cf47b124120777f2f1171015061c063a6f189685d51d94ea6 WHIRLPOOL 41ce511b6c12f6dc0410bdd1db0c4532bb3a01177da70593dec887014f7c31125c213ef8d273162118af5c6372fcdd0ab7616ff5f5096f0db872e99d02f9081b
+MISC ChangeLog 646 SHA256 597f74bdf2ef5fe15648e23dd752c07cbc40af7c6937ef735811c6efe76a10b2 SHA512 63b12b17681f6334719b0b51c35b5049d307511d1eff054dbebd6e1fe3669f11c810877a6889e4002a9ca1163227a7b57ee19e0eaae75d61487cec2fd17871c6 WHIRLPOOL 606dfdabe45d1ca3e698dd9511059f9e6dfccd1f6c49b70d6d84c9bd57b7ffeb6a7adc6515f6a2b84632a671048f385a71e8a4257a84c27e4796e66acbb09f68
 MISC metadata.xml 913 SHA256 093b6929d3794e81c15c1ceb1c2460d998f3a4c32e78e8459c1255d982c57054 SHA512 2cc53e7e0f14169b88d26324b071b2078012cc57bd9ddae0b14f18efbe2d1bc1ef0b66122c178b0e3019a48bec2ba87fc09186b4d8a96e8e7d8e51a997c09d69 WHIRLPOOL ec17032c4cfb7e9046a4ea13cb5fd7763c2ec4534e3d58c4c2ae846e108acadf72ad7c2a6b90132d94a17a56a98c866415af54fdbf144e9f534e5d4a07da8d60
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCWQy06AAKCRDP2g+bNZZC
-Ij0dAP0ZXCTtOy8LM7NQzE7/vbE1PLQqbla3jlb9+mVOp3BUAQD/QURSvd20ZcVM
-kSDvdngiqKizdzhVSIs7dn8j4qWuvg0=
-=Ciw1
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCWhMHjwAKCRDP2g+bNZZC
+InGVAQCYuzLc21CSFwP6upX4vaf98gRtqspZHsmdD3fB2GuBGgD8CrL5oy4T8Cgz
+pbrpY96PA2zg52Dx1WV/UUVsHAdkoQU=
+=Un4E
 -----END PGP SIGNATURE-----
